# hexpo

./: README.md
experiments/: heat_test.py
package/: LICENSE  Makefile  pyproject.toml
package/src/: manage.py
package/src/hexpo_game/: __init__.py  __main__.py  asgi.py  django_setup.py  echo.py  logging.yaml  settings.py  urls.py  wsgi.py
package/src/hexpo_game/core/: __init__.py  apps.py  click_handler.py  constants.py  devevent.py  game.py  grid.py  models.py  tests.py  twitch.py  twitch_click.py  types.py  views.py
package/src/hexpo_game/core/clicks_providers/: __init__.py  foofurbot.py  heat.py  utils.py
package/src/hexpo_game/core/migrations/: 0001_initial_models.py  0002_change_tiles_coordinates.py  0003_add_player_allowed_field.py  0004_add_occupied_tile_last_updated_at.py  0005_add_occupied_tile_nb_updates.py  0006_remove_occupied_tile_nb_updates.py  0007_add_game_mode.py  0008_link_occupied_tiles_and_actions_to_player_in_game.py  0009_fill_occupied_tiles_and_actions_player_in_game_id.py  0010_remove_occupied_tiles_and_actions_player_id_and_game_id.py  0011_add_back_game_to_occupied_title.py  0012_add_some_indexes.py  0013_game_use_actions_not_coins.py  0014_player_in_game_dead_at.py  0015_game_use_actions_not_coins_bis.py  0016_player_in_game_started_at.py  0017_player_in_game_killed_by.py  0018_action_state.py  0019_add_back_game_to_action.py  0020_rename_some_action_states.py  0021_add_main_action_index.py  0022_add_action_failure_reason.py  0023_set_level3_for_free_games.py  0024_index_to_count_player_actions.py  0025_use_ended_turn_to_know_if_player_dead.py  0026_banked_actions_is_float.py  0027_occupied_tile_level_is_float.py  0028_handle_messages_in_game.py  0029_game_current_turn_step.py  0030_new_game_step_and_action_types_labels.py  0030_new_game_step_labels.py  0031_game_step_start_end_time.py  0032_remove_game_max_players_allowed.py  0033_game_step_times_nullable.py  0034_random_events.py  0035_add_erosion_step.py  0036_game_end_mode.py  0037_remove_tiles_actions_buttons.py  0038_player_last_turn_played.py  0039_update_failure_reason_and_end_mode_choices.py  (+3 more)
package/src/hexpo_game/core/statics/: script.js  style.css
package/src/hexpo_game/core/templates/core/: include_messages.html  include_players.html  include_step_and_instructions_fragment.html  include_step_instructions.html  include_turn_step.html  index.html  players.html
package/src/hexpo_game/core/tests/: test_devevent.py  test_game.py  test_grid.py  test_views.py  test_websocket.py
package/src/hexpo_game/tests/: __init__.py  test_echo.py
package/src/hexpo_game/utils/: __init__.py  make_video.py  recreate_game.py
